Blender crashes after selecting one of the options for color at World tab #55884

Closed
opened 2018-07-10 11:29:04 +02:00 by Emir Sinan Gürlek · 3 comments

System Information
Windows 10 Pro (64bit) - Nvidia GTX 1070

Blender Version
2.80 Alpha (sub 20) commit date: 2018-07-09 22:47, hash: 1112f49

Short description of error
Blender crashes after selecting one of these for color at World tab:

  • All inputs except: Ambient Occlusion, Attribute, RGB (first).
  • All textures that has no 'texture' word in it. (Also if you select one that has 'texture' word in it, then selecting any texture for 'Vector' crashes Blender)
  • All colors except: Gamma (second), Hue Saturation Value (first), Invert (second), Mix (third).
  • All convertors except: Blackbody, Combine HSV, Combine RGB, Shader to RGB, Wavelength.

Exact steps for others to reproduce the error
1- Launch Blender
2- Go to World tab and left click 'Use Nodes'
3- Left click small dot at Color
4- Choose anything that is problematic as described above ('Noise' for example). And Blender crashes.

World_Use_Nodes.gif

**System Information** Windows 10 Pro (64bit) - Nvidia GTX 1070 **Blender Version** 2.80 Alpha (sub 20) commit date: 2018-07-09 22:47, hash: 1112f49 **Short description of error** Blender crashes after selecting one of these for color at World tab: - All inputs except: Ambient Occlusion, Attribute, RGB (first). - All textures that has no 'texture' word in it. (Also if you select one that has 'texture' word in it, then selecting any texture for 'Vector' crashes Blender) - All colors except: Gamma (second), Hue Saturation Value (first), Invert (second), Mix (third). - All convertors except: Blackbody, Combine HSV, Combine RGB, Shader to RGB, Wavelength. **Exact steps for others to reproduce the error** 1- Launch Blender 2- Go to World tab and left click 'Use Nodes' 3- Left click small dot at Color 4- Choose anything that is problematic as described above ('Noise' for example). And Blender crashes. ![World_Use_Nodes.gif](https://archive.blender.org/developer/F3904922/World_Use_Nodes.gif)

Added subscriber: @filibis

Added subscriber: @filibis

This issue was referenced by c236c80de4

This issue was referenced by c236c80de43245c001ac09ae8d2f067caa929a8a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55884
No description provided.