Fix T55884: shader node linked menu showing incompatible nodes.